# RxECS

./: .gitignore  CMakeLists.txt  Folder.DotSettings  LICENSE  sonar-project.properties
include/: RxECS.h
src/: ArchetypeManager.h  Column.cpp  Column.h  ColumnImpl.h  Component.h  ComponentIterator.h  Entity.h  EntityBuilder.h  EntityHandle.cpp  EntityHandle.h  EntityImpl.h  EntityQueue.cpp  EntityQueue.h  EntityQueueHandle.h  EntityQueueImpl.h  Filter.cpp  Filter.h  Hasher.h  Query.h  QueryBuilder.h  QueryImpl.h  QueryResult.cpp  QueryResult.h  Stream.cpp  Stream.h  System.cpp  System.h  SystemBuilder.cpp  SystemBuilder.h  SystemImpl.h  Table.cpp  Table.h  TableIterator.h  TableView.cpp  TableView.h  TableViewImpl.h  World.cpp  World.h
test/: ModuleTests.cpp  QueryTests.cpp  StreamTests.cpp  SystemTests.cpp  TestComponents.h  ThreadTests.cpp  WorldTests.cpp  doctest.h
